welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:2: error: ')' expected but 'return' found.
	if ((a!=b && b!=c) return 0
                           ^